# test

./: .gitignore  CMakeLists.txt  README.md  gpt.ipynb  main.cpp  main_2.cpp  watcher.h
dll/win/release/: facedetector.lib
facedetector/: CMakeLists.txt  facedetector.cpp  main_test.cpp
facedetector/dll/: facedetector.ilk
helpers/: CMakeLists.txt  facesaver.cpp  facesaver.h  help_functions.h  threadpoolwraper.cpp  threadpoolwraper.h
include/: facedetector.h
libs/: facedetector.lib
modules/: CMakeLists.txt
modules/FaceDetection/: CMakeLists.txt  fd.cpp  fd.h
modules/build-FaceDetection-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  faceDetection.exp  faceDetection.ilk  qtcsettings.cmake
modules/build-FaceDetection-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-739abb26cfc23ba89b19.json  cmakeFiles-v1-64a98954b22e8387033a.json  codemodel-v2-5b5ee53ffad70cbb22aa.json  index-2021-09-19T12-12-19-0658.json  target-faceDetection-Debug-094c2025484250e9cdad.json
modules/simpleDll/: CMakeLists.txt  fd.cpp  fd.h
